# doxygen_comment_generator

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml
sample/: SampleHeader.h  SampleSource.cpp  test_example_catch2.cpp  test_example_cppunit.cpp  test_example_gtest.cpp
scripts/: README.md  run_tests.py  run_tests.sh
src/generator/: analyzer.py  directory_processor.py  main.py  test_analyzer.py
src/generator/cplusplus/: cplusplus_generator.py
src/generator/cpp/: __init__.py  cpp_generator.py
src/generator/header/: header_generator.py
tests/: test_cpp_generator.py  test_generator.py  test_main.py  test_new_features.py
