[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doxygen_comment_generator"
version = "0.1.0"
description = "CPlusPlus Doxygen Comment Generator"
readme = "README.md"
license = { }
authors = [
    { name="Pradumn Sanodiya", email="pradumnsanodiya2@gmail.com" }
]
dependencies = [
]
requires-python = ">=3.7"

[project.scripts]
doxygen_comment_generator = "doxygen_comment_generator.main:main"
